@@ -1,3 +1,6 @@
+*master
+* added capability to add conditions to navigation-items (primary.item key, name, url, :if => Proc.new {current_user.admin?})
+
 *1.1.2
 
 * Bugfix: config now gets evaluated on every render_navigation call. Credits to Joël Azémar.
